# functoria

./: .merlin  .ocamlformat  .travis.yml  CHANGES.md  Functoria.CUSTOM.html  Functoria.Devices.html  Functoria.Dsl.html  Functoria.ImplTbl.html  Functoria.Info.html  Functoria.KEY.html  Functoria.Make.html  Functoria.Misc.html  Functoria.S.html  Functoria.SPECIALIZED.html  Functoria.base_configurable-c.html  Functoria.configurable-c.html  Functoria.foreign-c.html  Functoria.html  Functoria_app.Cmd.OCamlfind.html  Functoria_app.Cmd.html  Functoria_app.Codegen.html  Functoria_app.DSL.html  Functoria_app.Log.html  Functoria_app.Make.html  Functoria_app.Name.html  Functoria_app.S.html  Functoria_app.html  Functoria_dsl.ImplTbl.html  Functoria_dsl.Info.html  Functoria_dsl.Key.html  Functoria_dsl.base_configurable-c.html  Functoria_dsl.configurable-c.html  Functoria_dsl.html  Functoria_info.StringMap.html  Functoria_info.StringSet.html  Functoria_info.html  Functoria_key.Alias.html  Functoria_key.Arg.html  Functoria_key.Desc.html  Functoria_key.Doc.html  (+87 more)
_html/: index.html
app/: codegen.mli  device_graph.ml  dune  functoria_app.ml  functoria_app.mli  functoria_command_line.ml  functoria_command_line.mli  functoria_graph.ml  functoria_graph.mli  key_graph.ml
functoria/: index.html
functoria-runtime/: index.html
functoria.app/: index.html
lib/: dune  functoria.ml  functoria.mli  functoria_key.ml  functoria_key.mli  key.mli  (+3 more)
tests/: dune  e2e.ml  jbuild  test.ml  test_core.ml  test_full.ml  test_functoria_command_line.ml
tests/app/: config.ml
tests/core/: test.ml
tests/f0/: dune
tests/lib/: dune  jbuild  test_app.ml
(+117 files in other folders)
