opam-version: "2.0"
maintainer:   "Gabriel Radanne <drupyog@zoho.com>"
authors:      [ "Thomas Gazagnaire"
                "Anil Madhavapeddy"
                "Dave Scott"
                "Thomas Leonard"
                "Gabriel Radanne" ]
homepage:     "https://github.com/mirage/functoria"
bug-reports:  "https://github.com/mirage/functoria/issues"
dev-repo:     "git+https://github.com/mirage/functoria.git"
doc:          "https://mirage.github.io/functoria/"
license:      "ISC"
tags:         ["org:mirage"]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.1.0"}
  "cmdliner" {>= "0.9.8"}
  "rresult"
  "astring"
  "fmt" {>= "0.8.7"}
  "ocamlgraph"
  "logs"
  "bos"
  "fpath"
  "alcotest" {with-test}
  "ptime"
]
synopsis: "A DSL to organize functor applications"
description: """
Functoria is a DSL to describe a set of modules and functors, their types and
how to apply them in order to produce a complete application.

The main use case is mirage. See the [mirage](https://github.com/mirage/mirage)
repository for details.
"""
