(test
 (name      test_core)
 (modules   test_core)
 (libraries test_app alcotest cmdliner rresult astring)
 (package   functoria)
 (deps      app/config.ml app/app.ml)
 (flags (:standard (-w -3))))

(executable
 (name      test_full)
 (modules   test_full)
 (libraries functoria.test alcotest cmdliner rresult astring)
 (flags (:standard (-w -3))))
